--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,9 @@ jobs:
       - name: Move artifacts into npm target dirs
         run: npm run artifacts
 
+      - name: Run smoke tests
+        run: npm run smoke
+
       - name: Publish root + platform packages
         run: npm publish --provenance
         env:
