--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,9 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Setup protoc
+        uses: arduino/setup-protoc@v3
+
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
 
