--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,17 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Setup protoc
-        uses: arduino/setup-protoc@v3
+      - name: Install protoc (Linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
+      - name: Install protoc (Windows)
+        if: runner.os == 'Windows'
+        run: choco install protoc -y --no-progress
 
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
