ci(release): switch npm publish to trusted publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
           cache: npm
           registry-url: https://registry.npmjs.org
 
@@ -106,6 +106,4 @@ jobs:
         run: npm run smoke
 
       - name: Publish root + platform packages
-        run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish
