chore(npm): add repository metadata for provenance validation

--- a/npm/linux-x64-gnu/package.json
+++ b/npm/linux-x64-gnu/package.json
@@ -13,6 +13,14 @@
   ],
   "description": "Semantic text embedding store (Rust + TypeScript) built on embed_anything and LanceDB",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dinedal/ferrovex"
+  },
+  "homepage": "https://github.com/dinedal/ferrovex",
+  "bugs": {
+    "url": "https://github.com/dinedal/ferrovex/issues"
+  },
   "publishConfig": {
     "access": "public"
   },
